--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,32 @@
+@import url("https://fonts.googleapis.com/css2?family=Orbitron&family=Rampart+One&display=swap");
+.buttons {
+  width: 400px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.buttons__button--grey, .buttons__button--black, .buttons__button--orange, .buttons__button--black-zero {
+  color: white;
+  font-size: 20px;
+  font-weight: 900;
+  margin: 10px;
+  width: 70px;
+  border-radius: 25px;
+  padding: 10px;
+}
+.buttons__button--grey {
+  background-color: grey;
+}
+.buttons__button--black, .buttons__button--black-zero {
+  background-color: black;
+}
+.buttons__button--orange {
+  background-color: orange;
+}
+.buttons__button--black-zero {
+  width: 165px;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -5,10 +34,10 @@
 }
 
 body {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 100px auto;
-  width: 400px;
-  height: 800px;
   color: white;
   background-color: black;
 }/*# sourceMappingURL=style.css.map */
