--- a/src/style.css
+++ b/src/style.css
@@ -44,7 +44,7 @@
 
 header {
   font-family: "Orbitron";
-  padding-bottom: 20px;
+  padding-bottom: 50px;
 }
 
 * {
@@ -53,11 +53,24 @@ header {
   box-sizing: border-box;
 }
 
-body {
+.calculator-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 100px auto;
+  margin: auto;
+  padding: 50px;
   color: white;
   background-color: black;
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    background-color: white;
+    padding-top: 50px;
+  }
+  .calculator-container {
+    border-radius: 20px;
+    width: 400px;
+    background-color: black;
+  }
 }/*# sourceMappingURL=style.css.map */
