--- a/src/style.scss
+++ b/src/style.scss
@@ -9,11 +9,25 @@
   box-sizing: border-box;
 }
 
-body {
+.calculator-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 100px auto;
+  margin: auto;
+  padding: 50px;
   color: $primary-color;
   background-color: $secondary-color;
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    background-color: $primary-color;
+    padding-top: 50px;
+  }
+
+  .calculator-container {
+    border-radius: 20px;
+    width: 400px;
+    background-color: $secondary-color;
+  }
 }
