--- a/src/style.css
+++ b/src/style.css
@@ -33,12 +33,15 @@
   font-family: "Rampart One";
   font-size: 48px;
   border-radius: 20px;
+  height: 114px;
   width: 360px;
   margin-bottom: 30px;
   padding: 10px;
   text-align: end;
+  overflow: hidden;
 }
 .display__row--first {
+  height: 24px;
   font-size: 0.5em;
 }
 
