added display background color to variables

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,6 +4,7 @@ $primary-color: white;
 $secondary-color: black;
 $tertiary-color: orange;
 $quaternary-color: grey;
+$display-color: lightgoldenrodyellow;
 
 $primary-font: "Orbitron";
 $secondary-font: "Rampart One";
