--- a/src/_display.scss
+++ b/src/_display.scss
@@ -2,7 +2,7 @@
 
 .display {
   color: $secondary-color;
-  background-color: lightgoldenrodyellow;
+  background-color: $display-color;
   font-family: $secondary-font;
   font-size: 48px;
   border-radius: 20px;
